feat: add get book details and update api spec
closes #9
